--- a/utahtech4/style.css
+++ b/utahtech4/style.css
@@ -4,28 +4,32 @@ body {
   font-family: Verdana, sans-serif;
   background: linear-gradient(to bottom, #eeeeee, #ffffff);
   background-attachment: fixed;
+  margin: 0;
 }
 header {
+  grid-column: 2 / -2;
   background-color: #003058;
   color: #FFFFFF;
   font-family: Georgia, serif;
 }
-
 main{
+  grid-column: 2 / -2;
+  background-color: #ffffff;
   padding-left: 2rem;
   padding-right: 2rem;
 }
-h1{
+header h1{
   background-image: url('utahtechimages/utahtechlogo.svg');
   background-position: right;
   background-repeat: no-repeat;
   background-origin: content-box;
   padding-left: 1rem;
-  margin-bottom: 0;
+  margin: 0;
   line-height: 140%;
   padding: .5rem;
 }
 #homehero{
+  grid-column: 2 / -2;
   background-image: url('utahtechimages/homehero.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -33,6 +37,7 @@ h1{
   height: 300px;
 }
 #studenthero{
+  grid-column: 2 / -2;
   background-image: url('utahtechimages/studenthero.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,6 +45,7 @@ h1{
   height: 300px;
 }
 #facultyhero{
+  grid-column: 2 / -2;
   background-image: url('utahtechimages/facultyhero.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -47,16 +53,38 @@ h1{
   height: 300px;
 }
 nav {
-  background-color: #F3F3F3;
+  background-color: #424242;
   font-weight: bold;
-  padding: .5rem;
-  padding-left: 2rem;
+  position: sticky;
+  top: 0;
+  grid-column: 2 / -2;
+}
+nav ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-flow: row nowrap;
+}
+nav ul li {
+  width: 100%;
 }
 nav a{
   text-decoration: none;
+  color: white;
+  padding: 1rem 0rem;
+  display: block;
+  text-align: center;
+}
+nav a:hover {
+  background-color: #BA1C21;
+}
+main img{
+  float: right;
 }
 img{
   width: 300px;
+  padding-left: 2rem;
 }
 h2 {
   color: #424242;
@@ -79,13 +107,13 @@ footer {
   font-style: italic;
   text-align: center; 
   padding: 1rem;
+  grid-column: 2 / -2;
 }
 #wrapper {
-  background-color: #ffffff;
-  min-width: 960px;
-  max-width: 2048px;
-  box-shadow: 0px 3px 3px rgba(66, 66, 66, 0.3);
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  display: grid;
+  grid-auto-rows: minmax(0px, auto);
+  grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
+}
+* {
+  box-sizing: border-box;
 }
